--- a/www/content/q1.md
+++ b/www/content/q1.md
@@ -27,3 +27,12 @@ https://www.healthnotharmmd.org
 
 
 **NOTE: There are no Maryland laws that prevent ADULTS from seeking and obtaining reproductive interventions.**
+
+## RESOURCES
+
+It would be helpful if you would grab a meme (right click and chose Save As) and make a post about question 1. Link back to here, or even healthnotharmmd.org. If you make your own memes and want to share, tag me on Twitter @simulacra10 and I will grab it and add it here. 
+
+![](https://res.cloudinary.com/dafjqauwb/image/upload/v1723763344/question-1/ig-cards/Boy_drinking_smoking_meme_kreffo.png)
+![](https://res.cloudinary.com/dafjqauwb/image/upload/v1723763344/question-1/ig-cards/Girl_drinking_smoking_meme_cm4rwk.png)
+![](https://res.cloudinary.com/dafjqauwb/image/upload/v1723511731/question-1/ig-cards/VOTE_NO_1080x1080_Blue_gcilhv.png)
+![](https://res.cloudinary.com/dafjqauwb/image/upload/v1723511728/question-1/ig-cards/HANDS_OFF_fcamox.png)
